# ai-app

./: .env  .flake8  .gitattributes  .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  service_functions.py  test.py  web.py
.github/workflows/: main.yml
animals_classification/: model.ipynb  model.py
app/: models.py  utils.py  web.py
app/static/css/: styles.css
app/templates/: base.html  index.html  tweet_model.html
handwritten_text_recognition_model/: db_parser.py
license_plate_detection/: model.py
models/animals_classification/: model.py
models/naive_bayes/sentiment_analysis/: model.py
models/naive_bayes/tweet_disaster_classification/: model.py
naive_bayes/sentiment_analysis/: model.py
naive_bayes/tweet_disaster_classification/: model.py
naïve_bayes/: data_downloader.py
naïve_bayes/sentiment_analysis/: model.py
naïve_bayes/tweet_disaster_classification/: class_freq.json  data_parser.py  main.py  model.py
trained_models/animals_classification/: animals_model.h5
trained_models/tweet_disaster_classification/: words_freq.json
utils/: data_downloader.py  text_formatter.py
utils/data_processing/: downloader.py  preprocessor.py
weather_classification/: data_loader.py  data_preprocessor.py
web/: logic.py  models.py  seed.py  service_functions.py  utils.py  web.py
web/static/css/: styles.css
web/templates/: animals_model.html  base.html  filtered_projects.html  index.html  tweet_model.html
