[tool.poetry]
name = "poetry-ai"
version = "0.1.0"
description = "Poetry environment for AI application"
authors = ["Kyryl Fesiuk <kirill.fesiuk@gmail.com>"]
readme = "README.md"
packages = [{ include = "**/*" }]

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
opencv-python = "^4.8.0.74"
flask = "^2.3.2"
flask-sqlalchemy = "3.0.5"
psycopg2 = "^2.9.7"
pandas = "^2.0.3"
contractions = "^0.1.73"
nltk = "^3.8.1"
kaggle = "^1.5.16"
python-decouple = "^3.8"
pathlib = "^1.0.1"
tensorflow-io-gcs-filesystem = "0.31.0"
tensorflow = "2.12"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pylint = "^2.17.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
